<resources>
    <string name="app_name"> Registro Login</string>
    <string name="text_accounts">Contas</string>
    <string name="hint_name">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_confirm_password">Confirme a Senha</string>
    <string name="text_login">Login</string>
    <string name="text_register">Registrar</string>
    <string name="error_message_name">Nome Completo</string>
    <string name="error_message_email"> Email Válido</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Digite a Senha</string>
    <string name="success_message">Registrado com Sucesso</string>
    <string name="text_not_member">Registrar</string>
    <string name="text_already_member">Login</string>
    <string name="error_email_exists">Email Existente</string>
    <string name="error_password_match">Senha não conrresponde</string>
    <string name="error_valid_email_password">Email ou Password Inválidos</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Oi,</string>
    <string name="text_title">Login Puc-MG</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="already_a_member_login">Já é usuário? Login</string>
</resources>
