<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#41afea"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".ui.login.RegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:paddingBottom="0dp">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmail"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutEmail"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutEmail"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextName"
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPassword"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutPassword"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutConfirmPassword"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutConfirmPassword"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutConfirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            android:layout_width="249dp"
            android:layout_height="53dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/appCompatButtonRegister"
            app:layout_constraintStart_toStartOf="@+id/appCompatButtonRegister"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextConfirmPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="248dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="#e8eaeb"
            android:text="@string/text_register"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPassword" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewLoginLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="bottom|center"
            android:text="@string/already_a_member_login"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/appCompatButtonRegister"
            app:layout_constraintStart_toStartOf="@+id/appCompatButtonRegister"
            app:layout_constraintTop_toBottomOf="@+id/appCompatButtonRegister" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
