<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#41afea"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".ui.login.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginBottom="60dp">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/appCompatImageView2"
            android:layout_width="288dp"
            android:layout_height="246dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutPassword"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="text"
                android:maxLines="1"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            app:layout_constraintEnd_toEndOf="@+id/appCompatButtonLogin"
            app:layout_constraintStart_toStartOf="@+id/appCompatButtonLogin"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="text|textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="#f1f1f1"
            android:text="@string/text_login"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/textViewLinkRegister"
            app:layout_constraintStart_toStartOf="@+id/textViewLinkRegister"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewLinkRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/text_not_member"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/appCompatImageView2"
            app:layout_constraintStart_toStartOf="@+id/appCompatImageView2"
            app:layout_constraintTop_toBottomOf="@+id/appCompatButtonLogin" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
